--- a/.github/workflows/simple_angular_to_s3.yml
+++ b/.github/workflows/simple_angular_to_s3.yml
@@ -7,7 +7,11 @@ on:
       node_version:
         required: true
         type: string
-
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
