--- a/.github/workflows/simple_angular_to_s3.yml
+++ b/.github/workflows/simple_angular_to_s3.yml
@@ -31,7 +31,8 @@ jobs:
               with:
                 node-version: ${{ inputs.node_version }} 
                 cache: 'npm'
-            
+            - name: view path
+              run: ls
             - name: install dependencies
               run: npm ci
 
