--- a/.github/workflows/simple_angular_to_s3.yml
+++ b/.github/workflows/simple_angular_to_s3.yml
@@ -35,7 +35,7 @@ jobs:
                 node-version: ${{ inputs.node_version }} 
 
             - name: install dependencies
-              run: npm ci
+              run: npm install 
 
             - name: build app
               run: npm run build
