--- a/.github/workflows/simple_angular_to_s3.yml
+++ b/.github/workflows/simple_angular_to_s3.yml
@@ -42,5 +42,5 @@ jobs:
 
             - name: Upload files to S3
               run: |
-                aws s3 sync ./dist s3://${{inputs.bucket_name}}/ 
+                aws s3 sync ./dist/* s3://${{inputs.bucket_name}}/ 
                              
